[package]
name = "jca"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "An experimental computer algebra system and programming language."
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

homepage = "https://github.com/Juici/jca"
repository = "https://github.com/Juici/jca"

# TODO: Fill in categories and keywords as appropriate.
categories = []
keywords = []
