[package]
name = "jca"
version = "0.0.1"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "An experimental computer algebra system."
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

homepage = "https://github.com/Juici/jca"
repository = "https://github.com/Juici/jca"

# TODO: Fill in categories and keywords as appropriate.
categories = []
keywords = []

[workspace]
members = [
    "jca-cli",
    "jca-interp",
]
