[package]
name = "jca-cli"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A command-line interface to the jca interpreter."
edition = "2018"
license = "MIT/Apache-2.0"

homepage = "https://github.com/Juici/jca"
repository = "https://github.com/Juici/jca"

# TODO: Fill in categories and keywords as appropriate.
categories = []
keywords = []

[dependencies]
jca = { version = "0.0", path = "../" }
jca-interp = { version = "0.0", path = "../jca-interp" }
